# ESP_BOX_CONNECT_AI

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/bsp/: idf_component.yml
components/espressif__esp-box/: idf_component.yml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/app/: app_audio.c  app_sr.c  app_uart.c  app_uart.h  app_ui_ctrl.c  app_ui_events.c  app_wifi.c  app_wifi.h
main/ui/images/: ui_img_reply_chatgpt_logo_png.c
